--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
+
 <html>
 <head>
   <!--
-    https://unmoverstransport.github.io/unmovers.github.io/
+ 
   -->
   
   <base href="/">
@@ -40,7 +42,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3613426286';
+    var serviceWorkerVersion = '3673287290';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -110,6 +112,7 @@
       cMapUrl: 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/cmaps/', 
       cMapPacked: true, 
     } 
+    //window.workaround_for_flutter_93615 = true;
   </script> 
 
   <!-- <script> 
