--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 
 <html>
 <head>
-  <!--
- 
-  -->
-  
+
   <base href="/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="UN Movers">
+  <meta name="description" content="Unite Ndlela Transport Service">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="UN Movers">
+  <meta name="apple-mobile-web-app-title" content="Unite Ndlela">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
-  <title>UN Movers</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel= "icon" href="favicon.ico" type="image/x-icon">
+
+
+  <title>Unite Ndlela</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="styles.css">
 
@@ -42,7 +43,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1809819124';
+    var serviceWorkerVersion = '3643782262';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
