--- a/index.html
+++ b/index.html
@@ -25,9 +25,20 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="styles.css">
 
-</head>
-<body style="overflow: hidden">
 
+  <script>
+    let searchParams = new URLSearchParams(window.location.search);
+    if (searchParams.has('renderer')) {
+      window.flutterWebRenderer = searchParams.get('renderer');
+      console.log(searchParams.get('renderer') + ' renderer requested in the URL');
+    }
+
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = '2599418479';
+  </script>
+  <script src="flutter.js" defer></script>
+
+</head>
   <div class="center">
     <div class="sk-chase">
         <div class="sk-chase-dot"></div>
@@ -38,96 +49,103 @@
         <div class="sk-chase-dot"></div>
     </div>
   </div>
-
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
-    var serviceWorkerVersion = '261403372';
-    var scriptLoaded = false;
-    function loadMainDartJs() {
-      if (scriptLoaded) {
-        return;
-      }
-      scriptLoaded = true;
-      var scriptTag = document.createElement('script');
-      scriptTag.src = 'main.dart.js';
-      scriptTag.type = 'application/javascript';
-      document.body.append(scriptTag);
-    }
-
-    if ('serviceWorker' in navigator) {
-      // Service workers are supported. Use them.
-      window.addEventListener('load', function () {
-        // Wait for registration to finish before dropping the <script> tag.
-        // Otherwise, the browser will load the script multiple times,
-        // potentially different versions.
-        var serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
-        navigator.serviceWorker.register(serviceWorkerUrl)
-          .then((reg) => {
-            function waitForActivation(serviceWorker) {
-              serviceWorker.addEventListener('statechange', () => {
-                if (serviceWorker.state == 'activated') {
-                  console.log('Installed new service worker.');
-                  loadMainDartJs();
-                }
-              });
-            }
-            if (!reg.active && (reg.installing || reg.waiting)) {
-              waitForActivation(reg.installing || reg.waiting);
-            } else if (!reg.active.scriptURL.endsWith(serviceWorkerVersion)) {
-              console.log('New service worker available.');
-              reg.update();
-              waitForActivation(reg.installing);
-            } else {
-              console.log('Loading app from service worker.');
-              loadMainDartJs();
-            }
-          });
-        setTimeout(() => {
-          if (!scriptLoaded) {
-            console.warn(
-              'Failed to load app from service worker. Falling back to plain <script> tag.',
-            );
-            loadMainDartJs();
+  <body style="overflow: hidden">
+    <script>
+      window.addEventListener('load', function() {
+        //var loading = document.querySelector('#loading');
+        _flutter.loader.loadEntrypoint({
+          serviceWorker: {
+            serviceWorkerVersion: serviceWorkerVersion,
           }
-        }, 4000);
+        }).then(function(engineInitializer) {
+          //loading.classList.add('main_done');
+          return engineInitializer.initializeEngine();
+        }).then(function(appRunner) {
+        // loading.classList.add('init_done');
+          return appRunner.runApp();
+        }).then(function(app) {
+          // Wait a few milliseconds so users can see the "zoooom" animation
+          // before getting rid of the "loading" div.
+         // window.setTimeout(function() {
+            //loading.remove();
+         // }, 200);
+        });
       });
-    } else {
-      // Service workers not supported. Just drop the <script> tag.
-      loadMainDartJs();
-    }
-  </script>
+    </script>
 
-
-
-<!--   
-  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script> 
-  <script type="text/javascript"> 
-    pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.min.js"; 
-    pdfRenderOptions = { 
-      cMapUrl: 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/cmaps/', 
-      cMapPacked: true, 
-    } 
-    //window.workaround_for_flutter_93615 = true;
-  </script>  -->
-
-  <!-- <script> 
-    window.flutterConfiguration = {canvasKitBaseUrl: "unmovers.github.io/canvaskit/"}
-  </script>  -->
-  <script src="main.dart.js" type="application/javascript"></script> 
-<!--   
-  <script>
-    window.onload = function(){
-      setTimeout(function(){
-          var loadingIndicator = document.getElementById("loading_indicator");
-          if(loadingIndicator != null){
-            loadingIndicator.remove();
-          }
-      }, 10000)
-    }
-  </script> -->
-</body>
+    <!-- Put bellow code inside here Just incase theres an issue -->
+  </body>
 </html>
 
 
+
+
+<!-- put inside body at the end  -->
+
+    <!-- <div class="center">
+      <div class="sk-chase">
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+      </div>
+    </div> -->
+    <!-- <script>
+      var serviceWorkerVersion = null;
+      var scriptLoaded = false;
+      function loadMainDartJs() {
+        if (scriptLoaded) {
+          return;
+        }
+        scriptLoaded = true;
+        var scriptTag = document.createElement('script');
+        scriptTag.src = 'main.dart.js';
+        scriptTag.type = 'application/javascript';
+        document.body.append(scriptTag);
+      }
+
+      if ('serviceWorker' in navigator) {
+        // Service workers are supported. Use them.
+        window.addEventListener('load', function () {
+          // Wait for registration to finish before dropping the <script> tag.
+          // Otherwise, the browser will load the script multiple times,
+          // potentially different versions.
+          var serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
+          navigator.serviceWorker.register(serviceWorkerUrl)
+            .then((reg) => {
+              function waitForActivation(serviceWorker) {
+                serviceWorker.addEventListener('statechange', () => {
+                  if (serviceWorker.state == 'activated') {
+                    console.log('Installed new service worker.');
+                    loadMainDartJs();
+                  }
+                });
+              }
+              if (!reg.active && (reg.installing || reg.waiting)) {
+                waitForActivation(reg.installing || reg.waiting);
+              } else if (!reg.active.scriptURL.endsWith(serviceWorkerVersion)) {
+                console.log('New service worker available.');
+                reg.update();
+                waitForActivation(reg.installing);
+              } else {
+                console.log('Loading app from service worker.');
+                loadMainDartJs();
+              }
+            });
+          setTimeout(() => {
+            if (!scriptLoaded) {
+              console.warn(
+                'Failed to load app from service worker. Falling back to plain <script> tag.',
+              );
+              loadMainDartJs();
+            }
+          }, 4000);
+        });
+      } else {
+        // Service workers not supported. Just drop the <script> tag.
+        loadMainDartJs();
+      }
+    </script> -->
+    <!-- <script src="main.dart.js" type="application/javascript"></script>  -->
