--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     }
 
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2717101107';
+    var serviceWorkerVersion = '2275332616';
   </script>
-  <!-- <script src="flutter.js" defer></script> -->
+ <script src="flutter.js" defer></script>
 
 </head>
   <div class="center">
