--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     }
 
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1266752668';
+    var serviceWorkerVersion = '4250598856';
   </script>
 
   <script>
@@ -56,13 +56,11 @@
 </head>
 <body>
   <div class="center">
-    <div class="sk-chase">
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
+    <div class="sk-folding-cube">
+      <div class="sk-cube1 sk-cube"></div>
+      <div class="sk-cube2 sk-cube"></div>
+      <div class="sk-cube4 sk-cube"></div>
+      <div class="sk-cube3 sk-cube"></div>
     </div>
   </div>
   <script>
