--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     }
 
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '603117609';
+    var serviceWorkerVersion = '3236933162';
   </script>
 
   <script>
@@ -56,11 +56,10 @@
 </head>
 <body>
   <div class="center">
-    <div class="sk-folding-cube">
-      <div class="sk-cube1 sk-cube"></div>
-      <div class="sk-cube2 sk-cube"></div>
-      <div class="sk-cube4 sk-cube"></div>
-      <div class="sk-cube3 sk-cube"></div>
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
     </div>
   </div>
   <script>
