--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Unite Ndlela Transport Services (Pty)Ltd.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -44,7 +44,7 @@
     }
 
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1488022922';
+    var serviceWorkerVersion = '2860539609';
   </script>
 
   <script>
