--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Unite Ndlela Transport Services (Pty)Ltd.">
+  <meta name="msapplication-TileImage" content="images/thumbnail.png">
+
+  <!--properties-->
+  <meta property="og:site_name" content="Unite Ndlela">
+  <meta property="og:title" content="Need A reliable transportation service?">
+  <meta property="og:description" content="Need to move your Apartment, Office, House furniture or dispose your garden refuse? Unite Ndlela is the answer to your needs, it's our specialty">
+  <meta property="og:image" itemprop="image" content="images/thumbnail.png">
+  <meta property="og:type" itemprop="website">
+  <meta property="og:image:type" content="images/thumbnail.png">
+  <meta property="og:image:width" content="300">
+  <meta property="og:image:height" content="300">
+  <meta property="og:url" content="https://www.untransport.co.za">
+  
+  <!--website description-->
+  <meta name="description" content="Need to move your Apartment, Office, House furniture or dispose your garden refuse? Unite Ndlela is the answer to your needs, it's our specialty">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -31,8 +33,10 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel= "icon" href="favicon.ico" type="image/x-icon">
 
-
+  <!--Website Title-->
   <title>Unite Ndlela</title>
+
+  <!--links-->
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="styles.css">
 
@@ -44,7 +48,7 @@
     }
 
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3855493358';
+    var serviceWorkerVersion = '3107885714';
   </script>
 
   <script>
